# cgeditor

./: CMakeLists.txt  README.md
examples/wxWidgets/: CMakeLists.txt  MyHalfMove.cpp  MyHalfMove.hpp  main.cpp
src/: CGEHalfMove.cpp  CGEHalfMove.hpp  CGEditor.cpp  CGEditor.hpp  Types.cpp  Types.hpp
src/components/: Component.hpp  Margin.cpp  Margin.hpp  Menu.cpp  Menu.hpp  MoveTable.cpp  MoveTable.hpp  Scrollbar.cpp  Scrollbar.hpp
